# Robomaster_Energy

./: .gitignore  CMakeLists.txt  README.md  WORK_LOGS
Camera/: CMakeLists.txt  camParaConfig.cpp  cam_mode.cpp  shm.cpp  startFetch.cpp  streamRetrieve.cpp
Config/AutoHit/: ParamsAutoHit.yml
Config/Camera/: armor_cam_para_cfg.yml  daHuaCamConfig.yml
Config/Energy/: WindMillCfg.yml
Config/Models/: cubot_svm_4_30_dafu.xml
DeltaCV-master/cpu/: CMakeLists.txt  main.cpp
DeltaCV-master/cpu/examples/: grayBRWithSeg.cpp  grayBRWithSegStandard.cpp  inRange.cpp  weightedGrayWithSeg.cpp  ycrcbWithSeg.cpp
DeltaCV-master/cpu/include/deltaCV/SIMD/: core.hpp
DeltaCV-master/cpu/src/SIMD/: GrayBRWithSeg.cpp  WeightedGrayWithSeg.cpp  YCrCbWithSeg.cpp  inRange.cpp
DeltaCV-master/gpu/: main.cpp
DeltaCV-master/gpu/examples/: binarization.cpp  blur.cpp  colorSpace.cpp  edgeDetection.cpp  erode_dilate.cpp
DeltaCV-master/gpu/src/: getGpuConfig.cpp
Include/: ForDefine.h
Include/Camera/: StreamRetrieve.h  logOut.h  shm.hpp  startFetch.hpp
Include/SerialPort/: imgPublish.h  img_progress.h
Include/Src/ArmorFinder/: ArmorLibs.hpp
Include/Src/windmill/: Energy.h
Include/Tools/: test.h
Include/Tools/GetCameraParams/: GetCameraParams.h
Include/Tools/SVM/: SVM_train.h  SvmHog.h
OpcnCVSamples/19Samples/: ROIPROCESS.cpp
OpcnCVSamples/solvePnP/: decompose_homography.cpp  homography_from_camera_displacement.cpp
Script/: AH_1.service  AH_1.sh  AH_1_kill.sh  cam_node_1.service  cam_node_1.sh  cam_node_1_kill.sh
SerialPort/: PublishAsync.cpp  Serial_port.cpp  SubscribeAsync.cpp
Src/: SerialTest.cpp  main.cpp  shm.cpp
Tools/GetCameraParams/: GetCameraParams.cpp
Tools/SVM/: SVM_train.cpp  SvmHog.cpp
